Meeting times are no longer covered up by adjacent meetings

--- a/autoscheduler/frontend/src/components/SchedulingPage/Schedule/ScheduleCard/ScheduleCard.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/Schedule/ScheduleCard/ScheduleCard.css
@@ -14,6 +14,10 @@
     z-index: 3;
 }
 
+.schedule-card:hover {
+    z-index: 4;
+}
+
 .start-time, .end-time {
     color: black;
     background-color: white;
